--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -1,10 +1,16 @@
-# database Config
+
 spring:
+  application:
+    name: gulimall-product
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.150.133:3306/gulimall-pms?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root
+    url: jdbc:mysql://192.168.150.133:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
 
 mybatis-plus:
   # 告知mybatis-plus映射配置路径
