--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -1,11 +1,10 @@
-
 spring:
   application:
     name: gulimall-product
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.150.133:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.150.133:3306/gulimall-pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
@@ -18,3 +17,6 @@ mybatis-plus:
 
 server:
   port: 10000
+logging:
+  level:
+    com.wwxyh.gulimall: debug
