feat: mybatis-plus主键策略设置、分页插件添加

--- a/gulimall-ware/src/main/resources/application.yml
+++ b/gulimall-ware/src/main/resources/application.yml
@@ -2,13 +2,17 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.150.133:3306/gulimall-wms?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.150.133:3306/gulimall_wms?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root
 
 mybatis-plus:
   # 告知mybatis-plus映射配置路径
   mapper-locations: classpath:/mapper/**/*.xml
+  global-config:
+    db-config:
+      # 设置mybatis-plus主键方式为自增
+      id-type: auto
 
 server:
   port: 11000
