--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.150.133:3306/gulimall-sms?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.150.133:3306/gulimall_sms?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password: root
   cloud:
@@ -15,6 +15,10 @@ spring:
 mybatis-plus:
   # 告知mybatis-plus映射配置路径
   mapper-locations: classpath:/mapper/**/*.xml
+  global-config:
+    db-config:
+      # 设置mybatis-plus主键方式为自增
+      id-type: auto
 
 server:
   port: 7000
