--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     username: root
     password: root
-    url: jdbc:mysql://192.168.150.133:3306/gulimall-pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.150.133:3306/gulimall_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
@@ -14,6 +14,10 @@ spring:
 mybatis-plus:
   # 告知mybatis-plus映射配置路径
   mapper-locations: classpath:/mapper/**/*.xml
+  global-config:
+    db-config:
+      # 设置mybatis-plus主键方式为自增
+      id-type: auto
 
 server:
   port: 10000
